eureka的心跳时间和自我保护设置 hystrix的断路机制没有自己打开导致消费者每次都还会请求提供者 hystrix的异步调用的场景

--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 spring.application.name=spring-cloud-eureka
 server.port=8011
 eureka.instance.hostname=localhost
+#zhucefuwu
 eureka.client.register-with-eureka=false
+#faxianfuwu
 eureka.client.fetch-registry=false
+#eureka dizhi
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
+
+#guanbi ziwo baohu
+eureka.server.enable-self-preservation: false
+#xintiao shijian
+eureka.instance.lease-renewal-interval-in-seconds=20
+#fuwushixiao shijain  
+eureka.instance.lease-expiration-duration-in-seconds=60
