--- a/eureka-server/src/main/resources/application-peer2.properties
+++ b/eureka-server/src/main/resources/application-peer2.properties
@@ -5,3 +5,7 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=false
 eureka.client.service-url.defaultZone=http://peer3:8013/eureka/
+
+eureka.server.enable-self-preservation: false
+eureka.instance.lease-renewal-interval-in-seconds=20  
+eureka.instance.lease-expiration-duration-in-seconds=60
