--- a/pptest-consumer/pom.xml
+++ b/pptest-consumer/pom.xml
@@ -68,6 +68,11 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-starter-feign</artifactId>
     	</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.11.0</version>
+		</dependency>
     </dependencies>
     
     <dependencyManagement>
