测试提交空间

--- a/eureka-server/src/main/resources/application-peer2.properties
+++ b/eureka-server/src/main/resources/application-peer2.properties
@@ -6,6 +6,9 @@ eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=false
 eureka.client.service-url.defaultZone=http://peer3:8013/eureka/
 
+#guanbi ziwo baohu
 eureka.server.enable-self-preservation: false
-eureka.instance.lease-renewal-interval-in-seconds=20  
+#xintiao shijian
+eureka.instance.lease-renewal-interval-in-seconds=20
+#fuwushixiao shijain  
 eureka.instance.lease-expiration-duration-in-seconds=60
