--- a/eureka-server/src/main/resources/application-peer3.properties
+++ b/eureka-server/src/main/resources/application-peer3.properties
@@ -6,6 +6,7 @@ eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=false
 eureka.client.service-url.defaultZone=http://peer2:8012/eureka/
 
+#enen
 #guanbi ziwo baohu
 eureka.server.enable-self-preservation: false
 #xintiao shijian
