--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -28,3 +28,8 @@ spring.datasource.password=ppl123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.typeAliasesPackage=com.zm.provider.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
+
+#redis
+spring.redis.host =localhost
+spring.redis.port=7011  
+spring.redis.timeout=2000   
