provider新增测试803异常和删除再插入耗时， 企图模拟20个请求导致断路器打开不再进入消费者失败， 整合redis的两种方式，自定义缓存key策略貌似不管用， 企图写入自定义rbibon策略未完成

--- a/eureka-server/src/main/resources/application-peer2.properties
+++ b/eureka-server/src/main/resources/application-peer2.properties
@@ -7,7 +7,7 @@ eureka.server.enable-self-preservation=false
 eureka.client.service-url.defaultZone=http://peer3:8013/eureka/
 
 #guanbi ziwo baohu
-eureka.server.enable-self-preservation: false
+eureka.server.enable-self-preservation=false
 #xintiao shijian
 eureka.instance.lease-renewal-interval-in-seconds=20
 #fuwushixiao shijain  
