--- a/eureka-server/src/main/resources/application-peer3.properties
+++ b/eureka-server/src/main/resources/application-peer3.properties
@@ -8,7 +8,7 @@ eureka.client.service-url.defaultZone=http://peer2:8012/eureka/
 
 #enen
 #guanbi ziwo baohu
-eureka.server.enable-self-preservation: false
+eureka.server.enable-self-preservation = false
 #xintiao shijian
 eureka.instance.lease-renewal-interval-in-seconds=20
 #fuwushixiao shijain  
