--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -32,4 +32,19 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 #redis
 spring.redis.host =localhost
 spring.redis.port=7011  
-spring.redis.timeout=2000   
+spring.redis.timeout=2000  
+
+#mq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtualHost=YQT
+
+#ribbon
+hello-service.ribbon.NFLoadBalancerRuleClassName = com.zm.provider.config.MyRule
+
+#hystrix
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds =10000
+hystrix.command.default.circuitBreaker.requestVolumeThreshold =10
+hystrix.command.default.circuitBreaker.errorThresholdPercentage =50
