--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -9,7 +9,7 @@ eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
 
 #guanbi ziwo baohu
-eureka.server.enable-self-preservation: false
+eureka.server.enable-self-preservation = false
 #xintiao shijian
 eureka.instance.lease-renewal-interval-in-seconds=20
 #fuwushixiao shijain  
