--- a/pptest-consumer/pom.xml
+++ b/pptest-consumer/pom.xml
@@ -73,6 +73,10 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web-services</artifactId>
+		</dependency>
     </dependencies>
     
     <dependencyManagement>
