自定义负载均衡规则实现 hystrix缓存线程独享，放弃使用 自定义负载均衡拦截器报错找不到实例

--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -9,8 +9,8 @@ eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
 
 #guanbi ziwo baohu
-eureka.server.enable-self-preservation = false
+eureka.server.enable-self-preservation=false
 #xintiao shijian
-eureka.instance.lease-renewal-interval-in-seconds=20
+eureka.instance.lease-renewal-interval-in-seconds=10
 #fuwushixiao shijain  
-eureka.instance.lease-expiration-duration-in-seconds=60
+eureka.instance.lease-expiration-duration-in-seconds=30
