--- a/pptest-consumer/pom.xml
+++ b/pptest-consumer/pom.xml
@@ -28,7 +28,7 @@
     <dependencies>
         <!-- 依赖服务提供者 -->
         <dependency>
-           <groupId>org.sang</groupId>
+           <groupId>com.zm.spring.cloud</groupId>
 	       <artifactId>provider</artifactId>
 	       <version>0.0.1-SNAPSHOT</version>
         </dependency>
@@ -63,6 +63,12 @@
 		    <version>1.4.2.RELEASE</version>
 		</dependency>
 		
+		<!-- 断路器仪表盘 -->
+		<dependency>  
+            <groupId>org.springframework.cloud</groupId>  
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>  
+        </dependency>  
+        
 		<!-- 简洁的调用服务提供者 -->
 		<dependency>
 	        <groupId>org.springframework.cloud</groupId>
@@ -76,6 +82,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.2</version>
 		</dependency>
     </dependencies>
     
@@ -91,9 +102,9 @@
         </dependencies>
     </dependencyManagement>
     
-    <build>
-        <plugins>
-            <plugin>
+     <build>
+       <plugins>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>1.5.10.RELEASE</version>
@@ -106,6 +117,6 @@
 		        <skipTests>true</skipTests>       
 		        </configuration>        
 	        </plugin>    
-        </plugins>
+		</plugins>
     </build>
 </project>
