--- a/pptest-consumer/src/main/resource/application.properties
+++ b/pptest-consumer/src/main/resource/application.properties
@@ -3,12 +3,17 @@ server.port=8019
 eureka.client.service-url.defaultZone=http://peer2:8012/eureka
 
 #mybatis
-spring.datasource.url=jdbc:mysql://10.151.11.3:3306/payplus_test
+spring.datasource.url=jdbc:mysql://10.151.11.3:3306/payplus_test?userUnicode=true&characterEncoding=UTF8&useSSL=false
 spring.datasource.username=ppl
 spring.datasource.password=ppl123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #hystrix
 hystrix.command.default.metrics.rollingStats.timeInMilliseconds =10000
-hystrix.command.default.circuitBreaker.requestVolumeThreshold =10
+hystrix.command.default.circuitBreaker.requestVolumeThreshold =4
 hystrix.command.default.circuitBreaker.errorThresholdPercentage =50
+
+#ribbon
+#HELLO-SERVICE.ribbon.NFLoadBalancerRuleClassName = com.zm.spring.cloud.consumer.config.MyRule
+#HELLO-SERVICE.ribbon.NFLoadBalancerPingClassName = com.zm.spring.cloud.consumer.config.MyPing
+#HELLO-SERVICE.ribbon.listOfServers = http://localhost:8083/,http://localhost:8082/
