--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.sang</groupId>
+    <groupId>com.zm.spring.cloud</groupId>
     <artifactId>provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -104,7 +104,13 @@
         <dependency>  
             <groupId>redis.clients</groupId>  
             <artifactId>jedis</artifactId>  
-        </dependency>  
+        </dependency>
+
+	<!-- 安全检查要用到的 -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-actuator</artifactId>
+	</dependency>
         
     </dependencies>
     
