--- a/provider/src/main/resources/application-peer3.properties
+++ b/provider/src/main/resources/application-peer3.properties
@@ -3,6 +3,7 @@ spring.application.name=hello-service
 eureka.client.service-url.defaultZone=http://peer3:8013/eureka
 eureka.client.register-with-eureka=true
 feign.httpclient.enabled=true
+eureka.client.healthcheck.enabled=true
 
 spring.datasource.url=jdbc:mysql://10.151.11.3:3306/payplus_test
 spring.datasource.username=ppl
@@ -10,3 +11,15 @@ spring.datasource.password=ppl123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.typeAliasesPackage=com.zm.provider.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
+
+#redis
+spring.redis.host =localhost
+spring.redis.port=7011  
+spring.redis.timeout=2000  
+
+#mq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtualHost=YQT
