--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.application.name=hello-service
 eureka.client.service-url.defaultZone=http://peer2:8012/eureka
 eureka.client.register-with-eureka=true
 feign.httpclient.enabled=true
-#spring.data.cassandra.contact-points=172.19.40.50
+eureka.client.healthcheck.enabled=true
 
 #mybatis
 spring.datasource.url=jdbc:mysql://10.151.11.3:3306/payplus_test
@@ -41,10 +41,3 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtualHost=YQT
 
-#ribbon
-hello-service.ribbon.NFLoadBalancerRuleClassName = com.zm.provider.config.MyRule
-
-#hystrix
-hystrix.command.default.metrics.rollingStats.timeInMilliseconds =10000
-hystrix.command.default.circuitBreaker.requestVolumeThreshold =10
-hystrix.command.default.circuitBreaker.errorThresholdPercentage =50
