--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -106,11 +106,17 @@
             <artifactId>jedis</artifactId>  
         </dependency>
 
-	<!-- 安全检查要用到的 -->
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-actuator</artifactId>
-	</dependency>
+		<!-- 安全检查要用到的 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
+		<!-- 修改java文件后快速启动热部署 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
         
     </dependencies>
     
