--- a/pptest-consumer/pom.xml
+++ b/pptest-consumer/pom.xml
@@ -88,6 +88,12 @@
 			<artifactId>xalan</artifactId>
 			<version>2.7.2</version>
 		</dependency>
+		
+		<!-- 修改java文件后快速启动热部署 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
     </dependencies>
     
     <dependencyManagement>
