--- a/pptest-consumer/src/main/resource/application.properties
+++ b/pptest-consumer/src/main/resource/application.properties
@@ -10,10 +10,18 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #hystrix
 hystrix.command.default.metrics.rollingStats.timeInMilliseconds =10000
-hystrix.command.default.circuitBreaker.requestVolumeThreshold =4
+hystrix.command.default.circuitBreaker.requestVolumeThreshold =2
 hystrix.command.default.circuitBreaker.errorThresholdPercentage =50
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 500
+#hystrix.command.default.execution.timeout.enabled = true
+
+#hystrix mou ke hu duan peizhi
+#hystrix.command.HELLO-SERVICE.circuitBreaker.requestVolumeThreshold = 2
 
 #ribbon
 #HELLO-SERVICE.ribbon.NFLoadBalancerRuleClassName = com.zm.spring.cloud.consumer.config.MyRule
 #HELLO-SERVICE.ribbon.NFLoadBalancerPingClassName = com.zm.spring.cloud.consumer.config.MyPing
 #HELLO-SERVICE.ribbon.listOfServers = http://localhost:8083/,http://localhost:8082/
+
+#fegin
+feign.hystrix.enabled = true
