增加了日志整合，可以添加到文件中打包保存

--- a/pp-test-config/pom.xml
+++ b/pp-test-config/pom.xml
@@ -33,6 +33,12 @@
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+		
+		<!-- mq部分 -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<dependencyManagement>
