--- a/pp-test-config/src/main/resource/application.properties
+++ b/pp-test-config/src/main/resource/application.properties
@@ -2,6 +2,14 @@ spring.application.name=pp-test-config
 server.port=2007
 spring.cloud.config.server.git.uri=https://github.com/zhangmin1992/scconfig.git
 eureka.client.service-url.defaultZone=http://peer2:8012/eureka
+#git cangku wenjian dizhi,ke duoge
 spring.cloud.config.server.git.search-paths=gitconfigfile
 spring.cloud.config.server.git.username=zhangmin1992
 spring.cloud.config.server.git.password=qwer1234
+
+#duoge peizhicangku zanwei ceshi
+#spring.cloud.config.server.git.repos.test.pattern =test/*,mytest/my*,nitest/**
+#spring.cloud.config.server.git.repos.test.uri = https://github.com/zhangmin1992/scconfig.git
+
+#jia mi
+encrypt.key=mymiyao
