--- a/pptest-config-client/src/main/resource/bootstrap.properties
+++ b/pptest-config-client/src/main/resource/bootstrap.properties
@@ -10,5 +10,14 @@ spring.cloud.config.discovery.service-id=pp-test-config
 #shibai kuaisu xiangying pp-test-config meiyou qidong deshihou kuaisu xiangying shi bai 
 spring.cloud.config.fail-fast=true
 
+#shibai chognshi cishu
+spring.cloud.config.retry.max-attempts=6
+#jiange chengshu
+spring.cloud.config.retry.multiplier=1.1
+#chushichognshijiangeshijain haomaio
+spring.cloud.config.retry.initial-interval=1000
+#zuidajiangeshijian 
+spring.cloud.config.retry.max-interval=2000
+
 #dongtai shuaxin
 management.security.enabled=false
