--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -41,3 +41,6 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtualHost=YQT
 
+#log
+logging.config= classpath:log4j2.xml
+
