--- a/pptest-config-client/pom.xml
+++ b/pptest-config-client/pom.xml
@@ -46,7 +46,23 @@
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-actuator</artifactId>
 	</dependency>
-
+	
+	<!-- mq部分 -->
+	<dependency>
+	    <groupId>org.springframework.cloud</groupId>
+	    <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+	</dependency>
+	
+	<!-- 客户端连接自动重试 -->
+	<dependency>
+	    <groupId>org.springframework.retry</groupId>
+	    <artifactId>spring-retry</artifactId>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-aop</artifactId>
+	</dependency>
+	
 </dependencies>
 
 	<dependencyManagement>
