--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -21,13 +21,15 @@ eureka.client.register-with-eureka=true
 feign.httpclient.enabled=true
 eureka.client.healthcheck.enabled=true
 
+
 #mybatis
-spring.datasource.url=jdbc:mysql://10.151.11.3:3306/payplus_test
-spring.datasource.username=ppl
-spring.datasource.password=ppl123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-mybatis.typeAliasesPackage=com.zm.provider.entity
-mybatis.mapperLocations=classpath:mapper/*.xml
+spring.datasource.url = jdbc:mysql://10.151.11.3:3306/payplus_test?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username = ppl
+spring.datasource.password = ppl123456
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+mybatis.typeAliasesPackage = com.zm.provider.entity
+mybatis.mapperLocations = classpath:mapper/*.xml
 
 #redis
 spring.redis.host =localhost
@@ -43,4 +45,32 @@ spring.rabbitmq.virtualHost=YQT
 
 #log
 logging.config= classpath:log4j2.xml
+
+#mail
+#zhi chi qq 163
+spring.mail.host=smtp.qq.com
+spring.mail.protocol=smtp
+#fasongzhe
+spring.mail.username=2413172711@qq.com
+#gerenyouxiangdeshou
+spring.mail.password=tutoazdhtspwecja
+spring.mail.properties.mail.smtp.auth=true  
+spring.mail.properties.mail.smtp.starttls.enable=true  
+spring.mail.properties.mail.smtp.starttls.required=true
+
+#freemarker -- fasong yougeshi de mail
+#moban jiazai lujing duoge, fenge
+spring.freemarker.template-loader-path=classpath:/static/template/
+#moban wenjain de houzhuo
+spring.freemarker.suffix=.flt
+spring.freemarker.enabled=true
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.content-type=text/html
+spring.freemarker.allow-request-override=false
+#shi fou jian cha templates lu jing shi fou cun zai
+spring.freemarker.check-template-location=true
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.expose-spring-macro-helpers=false
 
