--- a/pp-test-config/src/main/resource/application.properties
+++ b/pp-test-config/src/main/resource/application.properties
@@ -1,3 +1,4 @@
+encrypt.key=sisterred
 spring.application.name=pp-test-config
 server.port=2007
 spring.cloud.config.server.git.uri=https://github.com/zhangmin1992/scconfig.git
@@ -11,5 +12,3 @@ spring.cloud.config.server.git.password=qwer1234
 #spring.cloud.config.server.git.repos.test.pattern =test/*,mytest/my*,nitest/**
 #spring.cloud.config.server.git.repos.test.uri = https://github.com/zhangmin1992/scconfig.git
 
-#jia mi
-encrypt.key=mymiyao
