--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -196,7 +196,25 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/resources/lib/aliyun-java-sdk-dysmsapi-1.0.0.jar</systemPath>
 		</dependency>
-        
+		
+		<!-- 连接ftp -->
+		<dependency>
+		  <groupId>commons-net</groupId>
+		  <artifactId>commons-net</artifactId>
+		  <version>3.6</version>
+		</dependency>
+		
+		<!-- <dependency>
+			<groupId>com.yeepay.g3.utils</groupId>
+			<artifactId>yeepay-ftp</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency> -->
+
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-core</artifactId>
+			<version>1.0.0</version>
+		</dependency>
     </dependencies>
     
     <dependencyManagement>
