再次试图动态注入queue exchange的绑定关系失败，动态注入的时候找不到上下文

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -43,6 +43,14 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtualHost=YQT
 
+#mq\u591A\u4E2A
+my.rabitmq.queueList[0]=queueName
+my.rabitmq.queueList[1]=queueName2
+my.rabitmq.exchangeList[0]=exchangeName
+my.rabitmq.exchangeList[1]=exchangeName2
+my.rabitmq.bindingList[0]=keyName
+my.rabitmq.bindingList[1]=keyName2
+
 #log
 logging.config= classpath:log4j2.xml
 
