--- a/provider/src/main/resources/rabbitmq.properties
+++ b/provider/src/main/resources/rabbitmq.properties
@@ -7,6 +7,9 @@ spring.rabbitmq.password=guest
 spring.rabbitmq.virtualHost=YQT
 
 #xi wang queue zai zi yuan wen jian zhu ru
-#my.rabitmq.queueList=queueName,queueName2
-#my.rabitmq.exchangeList=exchangeName,exchangeName2
-#my.rabitmq.bindingList=keyName,keyName2
+my.rabitmq.queueList[0]=queueName
+my.rabitmq.queueList[1]=queueName2
+my.rabitmq.exchangeList[0]=exchangeName
+my.rabitmq.exchangeList[1]=exchangeName2
+my.rabitmq.bindingList[0]=keyName
+my.rabitmq.bindingList[1]=keyName2
