1.增加了全局guid，并且修改日志文件将全局guid写入日志 2.检查出了redis使用工具类连接的时候的隐藏问题，需要删除依赖的-redis包否则会报错健康检查不通过

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -32,9 +32,9 @@ mybatis.typeAliasesPackage = com.zm.provider.entity
 mybatis.mapperLocations = classpath:mapper/*.xml
 
 #redis
-spring.redis.host =localhost
-spring.redis.port=7011  
-spring.redis.timeout=2000  
+#spring.redis.host =localhost
+#spring.redis.port=7011  
+#spring.redis.timeout=2000  
 
 #mq
 spring.rabbitmq.host=localhost
@@ -44,12 +44,12 @@ spring.rabbitmq.password=guest
 spring.rabbitmq.virtualHost=YQT
 
 #mq\u591A\u4E2A
-my.rabitmq.queueList[0]=queueName
-my.rabitmq.queueList[1]=queueName2
-my.rabitmq.exchangeList[0]=exchangeName
-my.rabitmq.exchangeList[1]=exchangeName2
-my.rabitmq.bindingList[0]=keyName
-my.rabitmq.bindingList[1]=keyName2
+#my.rabitmq.queueList[0]=queueName
+#my.rabitmq.queueList[1]=queueName2
+#my.rabitmq.exchangeList[0]=exchangeName
+#my.rabitmq.exchangeList[1]=exchangeName2
+#my.rabitmq.bindingList[0]=keyName
+#my.rabitmq.bindingList[1]=keyName2
 
 #log
 logging.config= classpath:log4j2.xml
