--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -26,7 +26,7 @@
     	  <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
-        </dependency>
+         </dependency>
 
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -120,10 +120,10 @@
         </dependency> -->
         
         <!-- 整合redis部分 -->
-         <dependency>
+        <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
+        </dependency> -->
         <dependency>  
             <groupId>redis.clients</groupId>  
             <artifactId>jedis</artifactId>  
@@ -172,7 +172,7 @@
 			<version>2.0</version>
 		</dependency>
 	
-		<!-- 阿里云发送短信服务依赖包3个 -->
+		<!-- 阿里云发送短信服务依赖包3个,加入后还未加入短信成功 -->
 		<dependency>
 			<groupId>aliyun-message-sdk-core</groupId>
 			<artifactId>aliyun-message-sdk-core</artifactId>
@@ -204,21 +204,13 @@
 		  <version>3.6</version>
 		</dependency>
 		
+		<!-- 易宝连接ftp -->
 		<!-- <dependency>
 			<groupId>com.yeepay.g3.utils</groupId>
 			<artifactId>yeepay-ftp</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency> -->
-
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-cassandra</artifactId>
-		</dependency>
+		
     </dependencies>
     
     <dependencyManagement>
