完善自定义负载均衡策略 完善健康检查 完善fegin请求中的坑 完善eureka不剔除失效节点问题

--- a/eureka-server/src/main/resources/application-peer3.properties
+++ b/eureka-server/src/main/resources/application-peer3.properties
@@ -6,10 +6,15 @@ eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=false
 eureka.client.service-url.defaultZone=http://peer2:8012/eureka/
 
-#enen
 #guanbi ziwo baohu
 eureka.server.enable-self-preservation = false
+#jiakuai qingli shijian moren 60*1000 miao
+eureka.server.eviction-interval-timer-in-ms=4000
 #xintiao shijian
 eureka.instance.lease-renewal-interval-in-seconds=10
 #fuwushixiao shijain  
 eureka.instance.lease-expiration-duration-in-seconds=30
+
+#shezhi jiemian shang de environment he Data center
+eureka.environment=trunk
+eureka.datacenter=peer3cloud
