--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -8,8 +8,18 @@ eureka.client.fetch-registry=false
 #eureka dizhi
 eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
 
+#shezhi jiemian shang de environment he Data center
+eureka.environment=trunk
+eureka.datacenter=cloud
+
+#moren shi ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}} 
+#172.19.40.50:hello-service:8081
+eureka.instance.instance-id=${spring.application.name}-${spring.cloud.client.ipAddress}:${server.port}
+
 #guanbi ziwo baohu
 eureka.server.enable-self-preservation=false
+#jiakuai qingli shijian moren 60*1000 miao
+eureka.server.eviction-interval-timer-in-ms=4000
 #xintiao shijian
 eureka.instance.lease-renewal-interval-in-seconds=10
 #fuwushixiao shijain  
