--- a/pptest-consumer/src/main/resource/application.properties
+++ b/pptest-consumer/src/main/resource/application.properties
@@ -18,10 +18,10 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 500
 #hystrix mou ke hu duan peizhi
 #hystrix.command.HELLO-SERVICE.circuitBreaker.requestVolumeThreshold = 2
 
-#ribbon
-#HELLO-SERVICE.ribbon.NFLoadBalancerRuleClassName = com.zm.spring.cloud.consumer.config.MyRule
-#HELLO-SERVICE.ribbon.NFLoadBalancerPingClassName = com.zm.spring.cloud.consumer.config.MyPing
-#HELLO-SERVICE.ribbon.listOfServers = http://localhost:8083/,http://localhost:8082/
+#ribbon zidingyi fuzaijunhengs
+#HELLO-SERVICE.ribbon.NFLoadBalancerRuleClassName = com.zm.spring.cloud.consumer.config.loadbalance.MyRule
+#HELLO-SERVICE.ribbon.NFLoadBalancerPingClassName = com.zm.spring.cloud.consumer.config.loadbalance.MyPing
 
 #fegin
 feign.hystrix.enabled = true
+feign.httpclient.enabled= true
