--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -19,7 +19,12 @@ spring.application.name=hello-service
 eureka.client.service-url.defaultZone=http://peer2:8012/eureka
 eureka.client.register-with-eureka=true
 feign.httpclient.enabled=true
+#kaiqi jiankangjiancha
 eureka.client.healthcheck.enabled=true
+#xintiao shijian
+eureka.instance.lease-renewal-interval-in-seconds=10
+#fuwushixiao shijain  
+eureka.instance.lease-expiration-duration-in-seconds=30
 
 
 #mybatis
