--- a/eureka-server/src/main/resources/application-peer2.properties
+++ b/eureka-server/src/main/resources/application-peer2.properties
@@ -8,7 +8,14 @@ eureka.client.service-url.defaultZone=http://peer3:8013/eureka/
 
 #guanbi ziwo baohu
 eureka.server.enable-self-preservation=false
+#jiakuai qingli shijian moren 60*1000 miao
+eureka.server.eviction-interval-timer-in-ms=4000
+
 #xintiao shijian
 eureka.instance.lease-renewal-interval-in-seconds=10
 #fuwushixiao shijain  
 eureka.instance.lease-expiration-duration-in-seconds=30
+
+#shezhi jiemian shang de environment he Data center
+eureka.environment=trunk
+eureka.datacenter=peer2cloud
