--- a/eureka-server/src/main/resources/application-peer3.properties
+++ b/eureka-server/src/main/resources/application-peer3.properties
@@ -8,8 +8,14 @@ eureka.client.service-url.defaultZone=http://peer2:8012/eureka/
 
 #guanbi ziwo baohu
 eureka.server.enable-self-preservation = false
+
 #jiakuai qingli shijian moren 60*1000 miao
 eureka.server.eviction-interval-timer-in-ms=4000
+
+#guanbi anquan renzheng,fouze zhiyou zhejuhua 
+#{"description":"Spring Cloud Eureka Discovery Client","status":"UP"}
+management.security.enabled=false
+
 #xintiao shijian
 eureka.instance.lease-renewal-interval-in-seconds=10
 #fuwushixiao shijain  
