--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -42,10 +42,16 @@ mybatis.mapperLocations = classpath:mapper/*.xml
 #spring.redis.timeout=2000  
 
 #mq
-spring.rabbitmq.host=localhost
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#spring.rabbitmq.virtualHost=YQT
+
+spring.rabbitmq.host=10.151.30.80
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=yqt
+spring.rabbitmq.password=yqt
 spring.rabbitmq.virtualHost=YQT
 
 #mq\u591A\u4E2A
@@ -66,10 +72,14 @@ spring.mail.protocol=smtp
 #fasongzhe
 spring.mail.username=2413172711@qq.com
 #gerenyouxiangdeshou
-spring.mail.password=tutoazdhtspwecja
+#spring.mail.password=tutoazdhtspwecja
+#spring.mail.password=vetheicuhhzvdidh
+#spring.mail.password=vdvvnirgqptsgahf
+spring.mail.password=tpmnxtxiazfkdibj
 spring.mail.properties.mail.smtp.auth=true  
 spring.mail.properties.mail.smtp.starttls.enable=true  
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.port =587
 
 #freemarker -- fasong yougeshi de mail
 #moban jiazai lujing duoge, fenge
