--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -12,6 +12,10 @@ eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
 eureka.environment=trunk
 eureka.datacenter=cloud
 
+#guanbi anquan renzheng,fouze zhiyou zhejuhua 
+#{"description":"Spring Cloud Eureka Discovery Client","status":"UP"}
+management.security.enabled=false
+
 #moren shi ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}} 
 #172.19.40.50:hello-service:8081
 eureka.instance.instance-id=${spring.application.name}-${spring.cloud.client.ipAddress}:${server.port}
