--- a/pptest-consumer/pom.xml
+++ b/pptest-consumer/pom.xml
@@ -29,8 +29,8 @@
         <!-- 依赖服务提供者 -->
         <dependency>
            <groupId>com.zm.spring.cloud</groupId>
-	       <artifactId>provider</artifactId>
-	       <version>0.0.1-SNAPSHOT</version>
+		    <artifactId>provider</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
         </dependency>
         
         <!-- spring cloud部分 -->
@@ -66,14 +66,13 @@
         <dependency>
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-hystrix</artifactId>
-		    <version>1.4.2.RELEASE</version>
-		</dependency>
+		    </dependency>
 		
 		<!-- 断路器仪表盘 -->
-		<dependency>  
+		<!-- <dependency>  
             <groupId>org.springframework.cloud</groupId>  
             <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>  
-        </dependency>  
+        </dependency>   -->
         
 		<!-- 简洁的调用服务提供者 -->
 		<dependency>
@@ -89,11 +88,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web-services</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>xalan</groupId>
 			<artifactId>xalan</artifactId>
 			<version>2.7.2</version>
-		</dependency>
+		</dependency> -->
 		
 		<!-- 修改java文件后快速启动热部署 -->
 		<dependency>
