--- a/pptest-consumer/src/main/resource/application.properties
+++ b/pptest-consumer/src/main/resource/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=ribbon-consumer
 server.port=8019
 eureka.client.service-url.defaultZone=http://peer2:8012/eureka
+eureka.client.healthcheck.enabled = true
 
 #mybatis
 spring.datasource.url=jdbc:mysql://10.151.11.3:3306/payplus_test?userUnicode=true&characterEncoding=UTF8&useSSL=false
