--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -210,7 +210,12 @@
 			<artifactId>yeepay-ftp</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency> -->
-		
+
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.11.0</version>
+		</dependency>
     </dependencies>
     
     <dependencyManagement>
@@ -225,7 +230,7 @@
         </dependencies>
     </dependencyManagement>
     
-    <!-- <build>
+    <build>
 		<plugins>
 			<plugin>
 				<groupId>org.mybatis.generator</groupId>
@@ -247,9 +252,38 @@
 				</dependencies>
 			</plugin>
 		</plugins>
+	</build>
+	
+	<!-- <build>
+		<plugins>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.6</version>
+				
+				 指定配置文件名称
+				 <configuration>
+			         指定文件位置好像不起作用，始终默认读取src/main/resources/generatorConfig.xml文件
+			         <configurationFile>src/main/resources/myBatisGeneratorConfig.xml</configurationFile>
+			         允许移动生成的文件
+			         <verbose>true</verbose>
+			         允许覆盖生成的文件
+			         <overwrite>true</overwrite>
+			      </configuration>
+				
+				指定依赖的数据库驱动
+					<dependencies>
+						<dependency>
+						  <groupId>db2jcc</groupId>
+						  <artifactId>db2jcc</artifactId>
+						  <version>1.0</version>
+						</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
 	</build> -->
 	
-    <build>
+    <!-- <build>
        <plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -265,5 +299,5 @@
 		        </configuration>        
 	        </plugin>    
 		</plugins>
-    </build>
+    </build> -->
 </project>
