--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -1,19 +1,3 @@
-#dan jie dian fang shi
-#server.port=8081
-#spring.application.name=hello-service
-#eureka.client.service-url.defaultZone=http://localhost:8011/eureka
-#eureka.client.register-with-eureka=true
-#feign.httpclient.enabled=true
-#
-#
-#spring.datasource.url=jdbc:mysql://10.151.11.3:3306/payplus_test?useUnicode=true&characterEncoding=utf8
-#spring.datasource.username=ppl
-#spring.datasource.password=ppl123456
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#mybatis.typeAliasesPackage=com.zm.provider.entity
-#mybatis.mapperLocations=classpath:mapper/*.xml
-
-#duo jiedian fangshi
 server.port=8081
 spring.application.name=hello-service
 eureka.client.service-url.defaultZone=http://peer2:8012/eureka
@@ -26,6 +10,13 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 #fuwushixiao shijain  
 eureka.instance.lease-expiration-duration-in-seconds=30
 
+#jianhang qita shujuku chansheng shiti 
+#spring.datasource.url = jdbc:db2://10.151.11.3:50010/qa3exp
+#spring.datasource.username = db2inst
+#spring.datasource.password = mvxxwVMPE6QLXzU+hu+WCQ==
+#spring.datasource.driver-class-name = com.ibm.db2.jcc.DB2Driver
+#mybatis.typeAliasesPackage = com.zm.provider.entity
+#mybatis.mapperLocations = classpath:mapper/*.xml
 
 #mybatis
 spring.datasource.url = jdbc:mysql://10.151.11.3:3306/payplus_test?useUnicode=true&characterEncoding=utf-8
@@ -96,4 +87,7 @@ spring.freemarker.check-template-location=true
 spring.freemarker.expose-request-attributes=false
 spring.freemarker.expose-session-attributes=false
 spring.freemarker.expose-spring-macro-helpers=false
+
+#shezhi map fanhui tuofeng moshi
+mybatis.configuration.map-underscore-to-camel-case=true
 
