阿里云短信整入

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -91,3 +91,11 @@ spring.freemarker.expose-spring-macro-helpers=false
 #shezhi map fanhui tuofeng moshi
 mybatis.configuration.map-underscore-to-camel-case=true
 
+#fasong duanxin 
+sms.accessKeyId=baomi
+sms.accessKeySecret=baomi
+sms.signName=\u5F20\u654F
+sms.codeTemplate=SMS_141597754
+sms.product=Dysmsapi
+sms.domain=dysmsapi.aliyuncs.com
+
