redis分布式限流，5分钟内所有系统只能访问A系统10次，根据配置决定是否丢弃请求，丢弃直接报异常业务方处理，不丢弃需要把当前请求存入redis,再另起守护线程消费redis中的数据

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -99,3 +99,9 @@ sms.codeTemplate=SMS_141597754
 sms.product=Dysmsapi
 sms.domain=dysmsapi.aliyuncs.com
 
+#shiyong redis jiehe lya jihe zidingyi zhu jie xianliu
+my.limit.isOpen=true
+my.limit.isDelete=false
+my.limit.time=1
+my.limit.count=10
+
