--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -216,6 +216,14 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		
+		<!-- shiro权限验证 -->
+		<!-- <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.3.2</version>
+        </dependency> -->
+        
     </dependencies>
     
     <dependencyManagement>
