测试多线程下并发请求，hystrix超过默认线程数10的时候请求被拒绝直接报异常或者进入fallback方法

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -63,14 +63,11 @@ spring.mail.protocol=smtp
 #fasongzhe
 spring.mail.username=2413172711@qq.com
 #gerenyouxiangdeshou
-#spring.mail.password=tutoazdhtspwecja
-#spring.mail.password=vetheicuhhzvdidh
-#spring.mail.password=vdvvnirgqptsgahf
 spring.mail.password=tpmnxtxiazfkdibj
 spring.mail.properties.mail.smtp.auth=true  
 spring.mail.properties.mail.smtp.starttls.enable=true  
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.port =587
+#spring.mail.port=587
 
 #freemarker -- fasong yougeshi de mail
 #moban jiazai lujing duoge, fenge
