--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -224,6 +224,12 @@
             <version>1.3.2</version>
         </dependency> -->
         
+        <dependency>
+		    <groupId>com.netflix.hystrix</groupId>
+		    <artifactId>hystrix-core</artifactId>
+		    <version>1.5.12</version>
+		</dependency>
+        
     </dependencies>
     
     <dependencyManagement>
