springboot整合encache 2.把redis监听去掉

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -96,9 +96,14 @@ sms.codeTemplate=SMS_141597754
 sms.product=Dysmsapi
 sms.domain=dysmsapi.aliyuncs.com
 
-#shiyong redis jiehe lya jihe zidingyi zhu jie xianliu
+#zidingyi zhu jie de xianliu peizhi
 my.limit.isOpen=true
 my.limit.isDelete=false
 my.limit.time=1
 my.limit.count=10
+
+#encache
+spring.cache.ehcache.config=classpath:ehcache.xml
+#xuyaozhiding xiangmuzhong suoyou shiyongdaode cachenames he encache.xml wenjian duiying
+spring.cache.cache-names=content
 
