--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -229,7 +229,21 @@
 		    <artifactId>hystrix-core</artifactId>
 		    <version>1.5.12</version>
 		</dependency>
-        
+		
+		<!-- springboot整合ehcache -->
+		<dependency>
+		  <groupId>net.sf.ehcache</groupId>
+		  <artifactId>ehcache</artifactId>
+		  <version>2.8.3</version>
+		</dependency>
+		
+		<!-- springboot整合kafka -->
+		<dependency>
+		  <groupId>org.apache.kafka</groupId>
+		  <artifactId>kafka_2.9.2</artifactId>
+		  <version>0.8.2.2</version>
+		</dependency>
+		
     </dependencies>
     
     <dependencyManagement>
