--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -237,13 +237,11 @@
 		  <version>2.8.3</version>
 		</dependency>
 		
-		<!-- springboot整合kafka -->
 		<dependency>
-		  <groupId>org.apache.kafka</groupId>
-		  <artifactId>kafka_2.9.2</artifactId>
-		  <version>0.8.2.2</version>
-		</dependency>
-		
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>1.1.1.RELEASE</version>
+        </dependency>		
     </dependencies>
     
     <dependencyManagement>
