--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -107,3 +107,17 @@ spring.cache.ehcache.config=classpath:ehcache.xml
 #xuyaozhiding xiangmuzhong suoyou shiyongdaode cachenames he encache.xml wenjian duiying
 spring.cache.cache-names=content
 
+#kafka zhenghe
+spring.kafka.producer.bootstrap-servers=172.18.166.31:19091,172.18.166.31:19092,172.18.166.31:19093
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+
+spring.kafka.bootstrap-servers=172.18.166.31:19092
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.auto-commit-interval=1000
+spring.kafka.consumer.group-id=test
+
+
+
