--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -241,7 +241,32 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
             <version>1.1.1.RELEASE</version>
-        </dependency>		
+        </dependency>
+        
+         <dependency>
+		    <groupId>org.apache.zookeeper</groupId>
+		    <artifactId>zookeeper</artifactId>
+		    <version>3.4.5</version>
+		     <!-- 解决引入这个包后报错 Failure to transfer com.sun.jmx:jmxri:jar:1.2.1 from的问题 -->
+		     <exclusions>
+		        <exclusion>
+		            <groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+		        </exclusion>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+            </exclusions>
+		</dependency>		
     </dependencies>
     
     <dependencyManagement>
